tests/sources/invalid/arrays/array_access_syntax_errors.fire
// Malformed array access expressions.
arr: int32[] = [1, 2, 3];

// Missing index expression
a: int32 = arr[;  //~ ERROR FS-PARSE-0012 @16
//~^ ERROR FS-PARSE-0010 @17
//~^^ ERROR FS-PARSE-0010 @17

// Missing ']' after index
b: int32 = arr[1;  //~ ERROR FS-PARSE-0010 @17
//~^ ERROR FS-PARSE-0010 @17
